# packing-app

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yml  biome.json  docker-compose.yaml  docker-entrypoint.sh  manage.py  mise.toml  package.json  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
accounts/: context_processors.py  forms.py  oidc.py  tests.py  urls.py  views.py
core/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
core/api/: serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
packing_project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/accounts/: login.html  register.html
templates/core/: dashboard.html
templates/core/categories/: detail.html  list.html
templates/core/trips/: create.html  detail.html  list.html
